# dune-dedicated-server-manager

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
app/: index.html  package-lock.json  package.json
app/src/: App.tsx  styles.css  types.ts  utils.test.ts  utils.ts
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/binaries/: .gitignore  README.md
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: battlegroups.rs  dto.rs  lib.rs  logging.rs  setup.rs
app/src/domain/: lifecycle.test.ts  lifecycle.ts  logs.test.ts  logs.ts  manager.ts
app/src/hooks/: useRemoteServerStatus.ts
app/src/services/: management.ts
app/src/stylesheets/: views.css
app/src/types/: management.ts  tunnel.ts
app/src/views/: director.tsx  logs.tsx  (+1 more)
crates/dune-manager-core/: Cargo.toml
crates/dune-manager-core/src/: cli.rs  lib.rs  toolchain.rs
crates/dune-manager-core/src/orchestration/: battlegroup_kubernetes.rs  battlegroup_management.rs  guest_bootstrap.rs  guest_bootstrap_ssh.rs  manager_api_installer.rs  mod.rs  providers.rs  proxmox.rs  vendor_flows.rs
crates/dune-manager-core/src/orchestration/russh_runner/: session.rs
crates/dune-manager-core/src/orchestration/russh_tunnel/: forwarder.rs
crates/dune-server-service/: Cargo.toml
docs/: ubuntu-manual-setup-guide.md  ubuntu-setup-guide.md
manager-api/src/: config_files_domain.rs  database_domain.rs  kubernetes_domain.rs  main.rs  models.rs  openapi.rs  routes.rs  security.rs
manager-ui/src/: App.svelte  api.ts  styles.css
release-notes/: 0.3.14.md  0.3.9.md
(+66 files in other folders)
