[package]
name = "dune-manager-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "dune_manager_core"

[[bin]]
name = "dune-manager-cli"
path = "src/bin/dune-manager-cli.rs"

[dependencies]
postgres = { version = "0.19", default-features = false }
native-tls = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
url = "2"
